tests/chainsaw/restrict-volume-types/bad-pod-hostpath.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-hostpath-volume
spec:
  containers:
  - name: container01
    image: busybox:1.35
    args:
    - sleep
    - 1d
    volumeMounts:
    - name: hostdata
      mountPath: /hostdata
  volumes:
  - name: hostdata
    hostPath:
      path: /var/log
      type: Directory
