tests/chainsaw/restrict-volume-types/bad-pod-nfs.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-nfs-volume
spec:
  containers:
  - name: container01
    image: busybox:1.35
    args:
    - sleep
    - 1d
    volumeMounts:
    - name: nfs
      mountPath: /nfs
  volumes:
  - name: nfs
    nfs:
      server: nfs-server.example.com
      path: /exports
