tests/chainsaw/restrict-volume-types/good-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod-allowed-volumes
spec:
  containers:
  - name: container01
    image: busybox:1.35
    args:
    - sleep
    - 1d
    securityContext:
      allowPrivilegeEscalation: false
      runAsNonRoot: true
      seccompProfile:
        type: RuntimeDefault
      capabilities:
        drop:
        - ALL
    volumeMounts:
    - name: data
      mountPath: /data
    - name: config
      mountPath: /config
    - name: secret
      mountPath: /secret
  volumes:
  - name: data
    emptyDir:
      sizeLimit: 100Mi
  - name: config
    configMap:
      name: my-config
      optional: true
  - name: secret
    secret:
      secretName: my-secret
      optional: true
